@@ -1,3 +1,8 @@
+2013-01-03  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.c (ix86_expand_move): Always assign to op1
+	after eliminating TLS symbols.
+
 2013-01-03  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR bootstrap/50167
